@@ -1,6 +1,8 @@
 2008-05-10  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/ggz/chess.py: Fix crash decoding empty GGZ strings (Bug #530579)
+	* src/lib/chess/pgn.py: Handle unknown tokens (Bug #526252)
+	* src/lib/main.py: Correctly catch and display PGN errors
 
 2008-04-13  Robert Ancell  <robert.ancell@gmail.com>
 
